--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -22,11 +22,8 @@
           <%= link_to '<i class="small material-icons left">shopping_cart</i>'.html_safe + " #{current_order.order_items.sum{|a| a.quantity}}", cart_path %>
         </li>
       </ul>
-      <ul class="side-nav center-align" id="sidebar">
-        <li class="mg-tp-50 mg-bt-20">
-          <%= link_to image_tag("logo.jpg", :alt => "Restaurant Logo", height: 64), root_path %>
-        </li>
-        <li><%= link_to 'Menu', menus_path %></li>
+      <ul class="side-nav center-align color-one-background" id="sidebar">
+        <li class="mg-tp-50"><%= link_to 'Menu', menus_path %></li>
         <li><%= link_to 'Contact', contact_pages_path %></li>
         <% if user_signed_in? %>
           <li>
@@ -41,7 +38,7 @@
           </li>
         <% end %>
         <li class="cart-text">
-          <%= link_to "Cart #{current_order.order_items.sum{|a| a.quantity}}", cart_path %>
+          <%= link_to "Cart (#{current_order.order_items.sum{|a| a.quantity}})", cart_path %>
         </li>
       </ul>
     </div>
