--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,73 +1,85 @@
-<div class="container">
-  <div class="container section z-depth-3">
-    <div class= "row">
-      <div class="input-field col s12">
-      <!-- <h4> Sign up </h4> -->
-      <h4>Edit <%= resource_name.to_s.humanize %></h4>
-      </div>
-    </div>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <div class="row">
-      <div class="input-field col s12">
-        <%= devise_error_messages! %>
-      </div>
-    </div>
+<div class="container section">
+  <div class="row">
+    <div class="col s12 m6 push-m3 mg-tp-50 z-depth-3">
+      <div class="row">
+        <div class="col s12 m8 push-m2">
+          <div class="row no-margin">
+            <div class="s12 m8 psuh-m2 mg-tp-20">
+              <h4 class="color-three-text center-align no-margin">Edit <%= resource_name.to_s.humanize %></h4>
+            </div> 
+          </div>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
-    <div class="row">
-      <div class="input-field col s12">
-        <%= f.email_field :email, autofocus: true %>
-        <%= f.label :email %><br />
-      </div>
-    </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <%= devise_error_messages! %>
+              </div>
+            </div>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-    <% end %>
+            <div class="row no-margin">
 
-    <div class="row">
-      <div class="input-field col s12">
-        <%= f.password_field :password, autocomplete: "off" %>
-        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      </div>
-    </div>
+              <div class="s12">  
+                <div class="row">
+                  <div class="input-field col s12">
+                    <%= f.email_field :email, autofocus: true %>
+                    <%= f.label :email %><br />
+                  </div>
+                </div>
 
-    <div class="row">
-      <div class="input-field col s12">
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
-        <%= f.label :password_confirmation %><br />
-      </div>
-    </div>
+                <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                  <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+                <% end %>
 
-    <div class="row">
-      <div class="input-field col s12">
-        <%= f.password_field :current_password, autocomplete: "off" %>
-        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-      </div>
-    </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <%= f.password_field :password, autocomplete: "off" %>
+                    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+                  </div>
+                </div>
 
-    <div class="row">
-      <div class="input-field col s12">
-        <%= f.submit "Update",:class => 'btn waves-effect waves-light' %>
-      </div>
-    </div>
-  <% end %>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+                    <%= f.label :password_confirmation %><br />
+                  </div>
+                </div>
 
-  <div class="divider"></div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <%= f.password_field :current_password, autocomplete: "off" %>
+                    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+                  </div>
+                </div>
 
-    <div class="row">
-      <div class="input-field col s12">
-        <h4>Cancel my account</h4>
-      </div>
-    </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <%= f.submit "Update",:class => 'btn waves-effect waves-light' %>
+                  </div>
+                </div>
+                <div class="divider"></div>
+              </div>
 
-    <div class="row">
-      <div class="input-field col s12">
-      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete , :class => 'btn waves-effect red waves-light'%></p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s12">
-        <%= link_to "Back", :back, :class => 'btn waves-effect waves-light' %>
+            </div>
+          <% end %>
+
+          <div class="row no-margin">
+            <div class="input-field col s12">
+              <h4 class="color-three-text">Cancel my account</h4>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="input-field col s12">
+            <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete , :class => 'btn waves-effect red waves-light'%></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <%= link_to "Back", :back, :class => 'btn waves-effect waves-light' %>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
   </div>
