--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="nav-wrapper">
       <%= link_to image_tag("logo.jpg", :alt => "Restaurant Logo", height: 64), root_path, class: "brand-logo" %>
-      <a href="#" data-activates="sidebar" class="button-collapse pull-right"><i class="material-icons">menu</i></a>
+      <a data-activates="sidebar" class="button-collapse pull-right"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><%= link_to 'Menu', menus_path %></li>
         <li><%= link_to 'Contact', contact_pages_path %></li>
