updated color of social-media

--- a/app/assets/stylesheets/modules/_colors.scss
+++ b/app/assets/stylesheets/modules/_colors.scss
@@ -18,3 +18,15 @@ $primary-color-three: #db5a00;
 .color-three-background {
 	background-color: $primary-color-three !important;
 }
+
+.facebook-color {
+	color: #3b5998 !important;
+}
+
+.twitter-color {
+	color: #1da1f2 !important;
+}
+
+.google-color {
+	color: #ea4335 !important;
+}
