--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -20,13 +20,13 @@
       </div>
       <div class="col m6 s12 white-text">
         <div class="col s4 m2 offset-m3">
-          <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
+          <i class="fa fa-facebook-official fa-3x facebook-color" aria-hidden="true"></i>
         </div>
         <div class="col s4 m2">
-          <i class="fa fa-google fa-3x" aria-hidden="true"></i>
+          <i class="fa fa-google fa-3x google-color " aria-hidden="true"></i>
         </div>
         <div class="col s4 m2">
-          <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+          <i class="fa fa-twitter fa-3x twitter-color" aria-hidden="true"></i>
         </div>
       </div>
     </div>
